Add build plugins, compile-time checker, and tooling documentation
- hkj-checker: javac compiler plugin detecting Path type mismatches at
  compile time with a no-false-positives policy
- hkj-gradle-plugin: one-line Gradle plugin configuring dependencies,
  preview features, and compile-time checks
- hkj-maven-plugin: Maven lifecycle extension providing equivalent
  functionality with diagnostics goal
- hkj-bom: Bill of Materials for version-aligned dependencies
- hkj-book tooling chapter: build plugins, compile-time checks, and
  diagnostics documentation for both Gradle and Maven
- Updated README, quickstart, and CONTRIBUTING with plugin setup guides
Make compiler and JVM arg configuration idempotent in HKJPlugin

Check for existing arguments before adding -Xplugin:HKJChecker,
--enable-preview, and JVM args to prevent duplicates when users
also configure these manually in their build scripts.